force-app/main/default/objects/Change_Control_Request_Line_Item__c/Change_Control_Request_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Change Control Request Line Item</label>
    <nameField>
        <displayFormat>CRLIN-{000000}</displayFormat>
        <label>Change Control Request Line Item No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Control Request Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>