force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used for identifying an existing consortium member with regards to CM Changes and GRL Changes</description>
    <inlineHelpText>Used for identifying an existing consortium member with regards to CM Changes and GRL Changes</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Change Control Request Line Items</relationshipLabel>
    <relationshipName>Change_Control_Request_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>