force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Average_Homes_Per_Batch_Previous__c.field-meta.xml
<CustomField>
    <fullName>Average_Homes_Per_Batch_Previous__c</fullName>
    <label>Average Homes Per Batch Previous</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>