force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Average_Homes_Per_Batch_Variance__c.field-meta.xml
<CustomField>
    <fullName>Average_Homes_Per_Batch_Variance__c</fullName>
    <formula>Average_Homes_Per_Batch_Previous__c -  Average_Homes_Per_Batch__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Homes Per Batch Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>