force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Baseline__c.field-meta.xml
<CustomField>
    <fullName>Baseline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Baseline</label>
    <referenceTo>FundingBaseline__c</referenceTo>
    <relationshipLabel>Change Control Request Line Items</relationshipLabel>
    <relationshipName>Change_Control_Request_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>