force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Baseline_Measure_Description__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Measure_Description__c</fullName>
    <description>Populated from CCR form and will be a mirror of the related baseline measure records description.</description>
    <label>Baseline Measure Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>