force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Baseline_Measure_Description_Previous__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Measure_Description_Previous__c</fullName>
    <description>Copies the value from the related baseline measure at the time of line item creation. Used to store the previous value of the description if changed via the change control request form on the GMS portal.</description>
    <label>Baseline Measure Description (Previous)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>