force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Baseline_Measure_Detail__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Measure_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Baseline Measure Detail</label>
    <referenceTo>BaselineMeasureDetail__c</referenceTo>
    <relationshipLabel>Change Control Request Line Items</relationshipLabel>
    <relationshipName>Change_Control_Request_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>