force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Baseline_New_Version__c.field-meta.xml
<CustomField>
    <fullName>Baseline_New_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The baseline record that is the new version of the baseline this change was for</description>
    <inlineHelpText>The baseline record that is the new version of the baseline this change was for</inlineHelpText>
    <label>Baseline - New Version</label>
    <referenceTo>FundingBaseline__c</referenceTo>
    <relationshipLabel>Change Control Request Line Items (Baseline - New Version)</relationshipLabel>
    <relationshipName>Updating_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>