force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Cache__c.field-meta.xml
<CustomField>
    <fullName>Cache__c</fullName>
    <description>Used to cache values on the record during processing</description>
    <label>Cache</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>