force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Change_Action__c.field-meta.xml
<CustomField>
    <fullName>Change_Action__c</fullName>
    <description>The action the GRL wants to undertake</description>
    <label>Change Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add</fullName>
            </value>
            <value>
                <fullName>Remove</fullName>
            </value>
            <value>
                <fullName>Name Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>