force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Change_Control_Request__c.field-meta.xml
<CustomField>
    <fullName>Change_Control_Request__c</fullName>
    <label>Change Control Request</label>
    <referenceTo>FundingAwardAmendment</referenceTo>
    <relationshipLabel>Change Control Request Line Items</relationshipLabel>
    <relationshipName>Change_Control_Request_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>