force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Change_From__c.field-meta.xml
<CustomField>
    <fullName>Change_From__c</fullName>
    <label>Change From</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>