force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/CM_Change_Reason__c.field-meta.xml
<CustomField>
    <fullName>CM_Change_Reason__c</fullName>
    <description>The Reason for the change of consortium member</description>
    <inlineHelpText>The Reason for the change of consortium member</inlineHelpText>
    <label>CM Change Reason</label>
    <type>TextArea</type>
</CustomField>