force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Co_Funding_A_A_spend_variance__c.field-meta.xml
<CustomField>
    <fullName>Co_Funding_A_A_spend_variance__c</fullName>
    <formula>Co_funding_A_A_spend__c -  Baseline__r.Baseline_Co_funding_A_A_spend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Co-Funding A&amp;A spend variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>