force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Co_Funding_Capital_Spend__c.field-meta.xml
<CustomField>
    <fullName>Co_Funding_Capital_Spend__c</fullName>
    <label>Co-Funding Capital Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>