force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Co_Funding_Spend_25_26_Variance__c.field-meta.xml
<CustomField>
    <fullName>Co_Funding_Spend_25_26_Variance__c</fullName>
    <formula>Co_Funding_Spend_25_26__c - Baseline__r.Co_Funding_Spend_25_26__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Co-Funding Spend 25/26 Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>