force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Co_funding_Spend_Variance__c.field-meta.xml
<CustomField>
    <fullName>Co_funding_Spend_Variance__c</fullName>
    <formula>Co_funding_Spend__c -  Baseline__r.SP_Baseline_Co_Funding_Spend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Co-funding Spend Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>