force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Consortium_Member__c.field-meta.xml
<CustomField>
    <fullName>Consortium_Member__c</fullName>
    <label>Consortium Member</label>
    <length>255</length>
    <type>Text</type>
</CustomField>