force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Contract_Value__c</fullName>
    <description>The value of the contract that the Grant Recipient has with the supplier</description>
    <inlineHelpText>The value of the contract that the Grant Recipient has with the supplier</inlineHelpText>
    <label>Contract Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>