force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Cost_To_Install_Measure_Variance__c.field-meta.xml
<CustomField>
    <fullName>Cost_To_Install_Measure_Variance__c</fullName>
    <formula>Previous_Cost_To_Install_Measure__c -  Cost_To_Install_Measure__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost To Install Measure Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>