force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Eligibility_Pathways_Change_and_Why__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Pathways_Change_and_Why__c</fullName>
    <label>Eligibility Pathways Change and Why</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>