force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Eligibility_Pathways_Change_Evidence__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Pathways_Change_Evidence__c</fullName>
    <label>Eligibility Pathways Change Evidence</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>