force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/End_Date_Original_Variance__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Original_Variance__c</fullName>
    <formula>End_Date__c - Baseline__r.Baseline_End_Date_Original__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date Original Variance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>