force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/End_Date_Previous__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Previous__c</fullName>
    <label>End Date Previous</label>
    <type>Date</type>
</CustomField>