force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/End_Date_Variance__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Variance__c</fullName>
    <formula>End_Date__c -  End_Date_Previous__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unit in Days</inlineHelpText>
    <label>End Date Variance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>