force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Energy_Savings__c.field-meta.xml
<CustomField>
    <fullName>Energy_Savings__c</fullName>
    <label>Energy Savings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>