force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Energy_Savings_Variance__c.field-meta.xml
<CustomField>
    <fullName>Energy_Savings_Variance__c</fullName>
    <formula>Energy_Savings__c -  Baseline__r.Energy_Savings_kWh__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Energy Savings Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>