force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Forecast_Grant_A_A_Spend_Variance__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Grant_A_A_Spend_Variance__c</fullName>
    <formula>Grant_A_A_Spend__c - Grant_A_A_Spend_Previous__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Grant A&amp;A Spend Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>