force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Funding_Award_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Funding_Award_Forecast__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populated with the related Forecast record when the change control line item relates to a change in forecast</description>
    <label>Funding Award Forecast</label>
    <referenceTo>FundingAwardForecast__c</referenceTo>
    <relationshipLabel>Change Control Request Line Items</relationshipLabel>
    <relationshipName>Change_Control_Request_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>