force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Funding_Award_Name_Previous__c.field-meta.xml
<CustomField>
    <fullName>Funding_Award_Name_Previous__c</fullName>
    <label>Funding Award Name Previous</label>
    <length>255</length>
    <type>Text</type>
</CustomField>