force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Grant_A_A_Spend_Previous__c.field-meta.xml
<CustomField>
    <fullName>Grant_A_A_Spend_Previous__c</fullName>
    <label>Grant A&amp;A Spend (Previous)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>