force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Grant_A_A_Spend_Variance__c.field-meta.xml
<CustomField>
    <fullName>Grant_A_A_Spend_Variance__c</fullName>
    <formula>Grant_A_A_Spend__c  -  Baseline__r.Baseline_Grant_A_A_Spend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grant A&amp;A Spend Variance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>