force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Grant_Capital_Spend_Variance__c.field-meta.xml
<CustomField>
    <fullName>Grant_Capital_Spend_Variance__c</fullName>
    <formula>Grant_Capital_Spend__c -  Baseline__r.Baseline_Grant_Capital_Spend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grant Capital Spend Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>