force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Grant_Funding_Spend__c.field-meta.xml
<CustomField>
    <fullName>Grant_Funding_Spend__c</fullName>
    <label>Grant Funding Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>