force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Grant_Funding_Spend_Variance__c.field-meta.xml
<CustomField>
    <fullName>Grant_Funding_Spend_Variance__c</fullName>
    <formula>Grant_Funding_Spend__c -  Baseline__r.SP_Baseline_Grant_Spend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grant Funding Spend Variance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>