force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Grant_Spend_26_27_Variance__c.field-meta.xml
<CustomField>
    <fullName>Grant_Spend_26_27_Variance__c</fullName>
    <formula>Grant_Spend_26_27__c - Baseline__r.Grant_Spend_26_27__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grant Spend 26/27 Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>