force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/GRL_Change_Reason__c.field-meta.xml
<CustomField>
    <fullName>GRL_Change_Reason__c</fullName>
    <label>GRL Change Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>The Lead Applicant is being replaced by an existing consortium member but remaining in The consortium</fullName>
            </value>
            <value>
                <fullName>The Lead Applicant is being replaced by an exisiting consortium member and leaving the consortium</fullName>
            </value>
            <value>
                <fullName>The Lead Applicant is being replaced by a new consortium member but remaining in The consortium</fullName>
            </value>
            <value>
                <fullName>The Lead Applicant is being replaced by a new consortium member and leaving the consortium</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>