force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Homes_Original_Variance__c.field-meta.xml
<CustomField>
    <fullName>Homes_Original_Variance__c</fullName>
    <formula>Total_number_of_homes_to_be_upgraded__c - Baseline__r.Homes_To_Be_Upgraded_Original__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Homes Original Variance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>