force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Homes_Variance__c.field-meta.xml
<CustomField>
    <fullName>Homes_Variance__c</fullName>
    <formula>Total_number_of_homes_to_be_upgraded__c -  Baseline__r.Total_Homes_to_be_Upgraded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Homes Variance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>