force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Installations_Completed_Variance__c.field-meta.xml
<CustomField>
    <fullName>Installations_Completed_Variance__c</fullName>
    <formula>Installations_Completed_Previous__c - Installations_Completed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installations Completed Variance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>