force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Is_Delete_Change__c.field-meta.xml
<CustomField>
    <fullName>Is_Delete_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Represents a change that is a deletion of a record</description>
    <inlineHelpText>Represents a change that is a deletion of a record</inlineHelpText>
    <label>Is Delete Change</label>
    <type>Checkbox</type>
</CustomField>