force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/MCS_Accredited__c.field-meta.xml
<CustomField>
    <fullName>MCS_Accredited__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the supplier MCS Accredited</description>
    <inlineHelpText>Is the supplier MCS Accredited</inlineHelpText>
    <label>MCS Accredited</label>
    <type>Checkbox</type>
</CustomField>