force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Measure_KPI_Variance__c.field-meta.xml
<CustomField>
    <fullName>Measure_KPI_Variance__c</fullName>
    <description>Formula to calculate the difference between the previous KPI value and the updated value.</description>
    <formula>Measure_KPI_Number__c - Previous_Measure_KPI_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Measure KPI Variance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>