force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Measure_Type__c.field-meta.xml
<CustomField>
    <fullName>Measure_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populated from the change request form when a change involves a measure detail change. The value will mirror the type field on related baseline mirror object.</description>
    <label>Property Measure Type</label>
    <referenceTo>PropertyMeasureType__c</referenceTo>
    <relationshipLabel>Change Control Request Line Items</relationshipLabel>
    <relationshipName>Change_Control_Request_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>