force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Measure_Type_Previous__c.field-meta.xml
<CustomField>
    <fullName>Measure_Type_Previous__c</fullName>
    <description>To store the related baseline measure detail&apos;s current value on creation of the line item. The value will be copied at the time of creation via the GMS form.</description>
    <label>Measure Type (Previous)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Property_Measure_Type</valueSetName>
    </valueSet>
</CustomField>