force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/New_Consortium_Member_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Consortium_Member_Name__c</fullName>
    <description>The name of the consortium member that will be added to the Funding Award when Action_Type is add, and the new name of the consortium member when the Action Type is Name Change

The name of the new consortium member that will be replacing the GRL on GRL change types</description>
    <inlineHelpText>The name of the consortium member that will be added to the Funding Award when Action_Type is add, and the new name of the consortium member when the Action Type is Name Change

The name of the new consortium member that will be replacing the GRL on GRL change types</inlineHelpText>
    <label>New Consortium Member Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>