force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/No_of_Homes_Assessed_Variance__c.field-meta.xml
<CustomField>
    <fullName>No_of_Homes_Assessed_Variance__c</fullName>
    <formula>No_of_Homes_Assessed__c -   No_of_Homes_Assessed_Previous__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Homes Assessed Variance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>