force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/No_of_Homes_Completed__c.field-meta.xml
<CustomField>
    <fullName>No_of_Homes_Completed__c</fullName>
    <inlineHelpText>This is the forecast field which is validated against the baselines No Of Homes Upgraded field</inlineHelpText>
    <label>No of Homes Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>