force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/No_of_Homes_Completed_Variance__c.field-meta.xml
<CustomField>
    <fullName>No_of_Homes_Completed_Variance__c</fullName>
    <formula>No_of_Homes_Completed__c -  No_of_Homes_Completed_Previous__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Homes Completed Variance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>