force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/No_of_homes_ending_at_EPC_A__c.field-meta.xml
<CustomField>
    <fullName>No_of_homes_ending_at_EPC_A__c</fullName>
    <label>No. of homes ending at EPC A</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>