force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/No_of_homes_ending_at_EPC_B_Variance__c.field-meta.xml
<CustomField>
    <fullName>No_of_homes_ending_at_EPC_B_Variance__c</fullName>
    <formula>No_of_homes_ending_at_EPC_B__c - Baseline__r.No_of_homes_ending_at_EPC_B__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No. of homes ending at EPC B Variance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>